# two_dimensional_XY_model

./: .gitignore  CMakeLists.txt  README.md  Tc_vs_size.cu  magnetisation_susceptibility_specific_heat_vs_temperature.cu  main.cpp  main.cu  vortex_configuration.cu
result/: .directory  quiver_plot.py  quiver_plot_128_0.001000_1048576.data  quiver_plot_128_0.001000_1073741824.data  quiver_plot_128_0.100000_1048576.data  quiver_plot_128_0.100000_1073741824.data  quiver_plot_128_0.500000_1048576.data  quiver_plot_128_0.500000_1073741824.data  quiver_plot_128_2.000000_1048576.data  quiver_plot_128_2.000000_1073741824.data  quiver_plot_T_0.5.csv  quiver_plot_T_0.5.py
result/Tc_vs_size/: 0.data  100.data  1000.data  10000.data  2500.data  50.data  500.data  fig_100_8.eps  fig_2500_8.eps  fig_500_8.eps  fig_50_8.eps  plot.py
result/magnetisation_susceptibility_specific_heat_vs_temperature/: 1024_10_8.data  256_10_8.data  512_100000_8.data  512_10000_8.data  512_1000_8.data  512_100_8.data  512_10_8.data  512_128_128.data  512_500_8.data  fig_512_100000_8.eps  fig_512_10000_8.eps  fig_512_1000_8.eps  fig_512_100_8.eps  plot.py
result/vortex_configuration/: .directory  128_0.001000_1048576.data  128_0.001000_1073741824.data  128_0.010000_1048576.data  128_0.010000_1073741824.data  128_0.010000_134217728.data  128_0.010000_16777216.data  128_0.010000_2097152.data  128_0.010000_2147483648.data  128_0.010000_268435456.data  128_0.010000_33554432.data  128_0.010000_4194304.data  128_0.010000_536870912.data  (+14 more)
src/: cuda_reduction.cu  cuda_reduction.h  xy_model.cu  xy_model.h
(+4 files in other folders)
